[package]
name = "matdesign-color"
version = "0.1.2"
authors = ["Leonardo Vencovsky <leonardo.vencovsky@gmail.com>"]
edition = "2018"

description = "Material Design Color Palettes for Rust"
keywords = ["color", "material-design", "design", "palette", "const"]
categories = ["no-std", "graphics", "web-programming"]

documentation = "https://docs.rs/matdesign-color"
homepage = "https://github.com/LeoVen/matdesign-color"
repository = "https://github.com/LeoVen/matdesign-color"
readme = "../README.md"
license = "MIT"

[dependencies]

[dev-dependencies]
strum = { version = "0.20", features = ["derive"] }
